Closed
Bug 470999
Opened 16 years ago
Closed 16 years ago
There are several build failures on solaris build for tamarin-redux.
Categories
(Tamarin Graveyard :: Build Config, defect)
Tracking
(Not tracked)
VERIFIED
FIXED
People
(Reporter: leon.sha, Assigned: leon.sha)
Details
Attachments
(1 file)
2.54 KB,
patch
|
stejohns
:
review+
|
Details | Diff | Splinter Review |
"/export/home/leon.sha/uild/tamarin-redux/nanojit/Assembler.cpp", line 1560: Error: Operand expected instead of "{".
"/export/home/leon.sha/uild/tamarin-redux/core/../codegen/../nanojit/LIR.h", line 322: Error: "," expected instead of "disp".
"/export/home/leon.sha/uild/tamarin-redux/core/../codegen/../nanojit/LIR.h", line 323: Error: Use ";" to terminate declarations.
"/export/home/leon.sha/uild/tamarin-redux/core/../codegen/../nanojit/LIR.h", line 340: Error: "," expected instead of "imm24".
"/export/home/leon.sha/uild/tamarin-redux/core/../codegen/../nanojit/LIR.h", line 348: Error: "," expected instead of "imm16".
"/export/home/leon.sha/uild/tamarin-redux/core/../codegen/../nanojit/LIR.h", line 395: Error: imm16 is not a member of const nanojit::LIns::i_type.
"/export/home/leon.sha/uild/tamarin-redux/core/../codegen/../nanojit/LIR.h", line 396: Error: imm24 is not a member of const nanojit::LIns::t_type.
"/export/home/leon.sha/uild/tamarin-redux/core/../codegen/../nanojit/LIR.h", line 404: Error: imm16 is not a member of const nanojit::LIns::i_type.
"/export/home/leon.sha/uild/tamarin-redux/core/../codegen/../nanojit/LIR.h", line 408: Error: imm16 is not a member of nanojit::LIns::i_type.
"/export/home/leon.sha/uild/tamarin-redux/core/../codegen/../nanojit/LIR.h", line 415: Error: disp is not a member of const nanojit::LIns::sti_type.
"/export/home/leon.sha/uild/tamarin-redux/core/NativeFunction.cpp", line 73: Error: Cannot use double(*)(avmplus::MethodEnv*,unsigned,int*) to initialize const double.
"/export/home/leon.sha/uild/tamarin-redux/core/NativeFunction.cpp", line 73: Error: Cannot use double(*)(avmplus::MethodEnv*,unsigned,int*) to initialize const double.
Updated•16 years ago
|
Attachment #354363 -
Flags: review?(stejohns) → review+
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Updated•16 years ago
|
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•