Bug 470999 There are several build failures on solaris build for tamarin-redux.  stejohns: review+